--- a/package.json
+++ b/package.json
@@ -32,9 +32,10 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/2winter-dev/hexo-sitemap-html.git"
   },
   "bugs": {
-    "url": ""
-  }
+    "url": "https://github.com/2winter-dev/hexo-sitemap-html/issues"
+  },
+  "homepage": "https://github.com/2winter-dev/hexo-sitemap-html#readme"
 }
