--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hexo-sitemap-html",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -36,7 +36,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/2winter-dev/hexo-sitemap-html.git"
+    "url": "git+https://github.com/2winter-dev/hexo-sitemap-html.git"
   },
   "bugs": {
     "url": "https://github.com/2winter-dev/hexo-sitemap-html/issues"
